# python-mdns-discovery

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/ebus_mdns_discovery/: __init__.py  backend.py  browser.py  config.py  registry.py  service.py
tests/: test_browser.py  test_browser_lifecycle.py  test_config.py  test_registry.py  test_service.py
